# coals

./: .gitignore  README.md  ROADMAP.md  demo.py  flake.nix  pyproject.toml
coals/: __init__.py  furnace.py  store.py
tests/: test_store.py
